# graphQA-Phoenix

./: .gitignore  Makefile  README.md  config.sub  configure  configure.in  mkinstalldirs
Grammar/: GenGram.gra  GenGram.net  GenGram_abs.gra  GenGram_flat.gra  MGram.gra  MGram.net  MGram_abs.gra  MGram_flat.gra  base.dic  nets
Grammar/GRAMMAR/: ExtraWords.txt  Generic.forms  Generic.gra  Join.bat  Master.forms  Master.gra  ProfessorQueries.forms  ProfessorQueries.gra  ProfessorQueriesOld.gra  QuickTest.bat  THIS IS THE CORRECT GRAMMER STUFF!.txt  cat.pl  filename.txt
Scripts/: parseTestSet.py  parseTestSet.py~  parseWrapper.py  parseWrapper.py~  parse_input.txt  testSetParses.txt  testSetQuestions.txt
config/: Makefile  common_make_rules  config  config.in
doc/: Makefile  README  parse.doc  scoring.doc  scoring2.doc
examples/: Makefile
examples/toygra/: ..net  base.dic  forms  no.gra  yes.gra
examples/toygra/CVS/: Entries  Repository  Root
include/: Makefile  dict.h  globals_parse.h  parse.h  print_structs.h
lib/: Makefile
src/: Makefile
src/main/: Makefile  compile_grammar.c  concept_leaf.c  make.depend  parse_text.c  parse_text_edit.c  pconf.h  train.c
src/main/include/: globals_gram.h  grammar.h
src/phoenix/: Makefile  dict.c  grammar.c  make.depend  match.c  match.h  parse.c  pconf.c  posixwin32.c  print_structs.c
src/scripts/: Makefile  compile.bat  mk_nets.perl  mk_nets2.perl  pack_gra.perl  unpack_gra.perl
workspace/: workspace.dsw  workspace.ncb  workspace.opt  workspace.sln
workspace/_All/: _All.dsp  _All.plg  _All.vcproj
workspace/_All/Release/: BuildLog.htm
workspace/compile_grammar/: compile_grammar.dsp  compile_grammar.plg  compile_grammar.vcproj
workspace/compile_grammar/Debug/: BuildLog.htm  compile_grammar.ilk  mt.dep  vc90.idb
workspace/compile_grammar/Release/: BuildLog.htm  mt.dep  vc90.idb
workspace/concept_leaf/: concept_leaf.dsp  concept_leaf.plg  concept_leaf.vcproj
workspace/concept_leaf/Debug/: BuildLog.htm  concept_leaf.ilk  mt.dep  vc90.idb
workspace/concept_leaf/Release/: BuildLog.htm  mt.dep  vc90.idb
workspace/main/: main.dsp
workspace/parse_text/: parse_text.dsp  parse_text.plg  parse_text.vcproj
workspace/parse_text/Debug/: BuildLog.htm  mt.dep  parse_text.ilk  vc90.idb
workspace/parse_text/Release/: BuildLog.htm  mt.dep  vc90.idb
workspace/parse_text/include/: linkage.h  posixwin32.h
workspace/phoenix/: phoenix.dsp  phoenix.plg  phoenix.vcproj
workspace/phoenix/Debug/: BuildLog.htm  mt.dep  phoenix.exp  phoenix.ilk  phoenix.lib  vc90.idb
workspace/phoenix/Release/: BuildLog.htm  mt.dep  phoenix.exp  phoenix.lib  vc90.idb
workspace/train/: train.dsp  train.plg  train.vcproj
workspace/train/Debug/: BuildLog.htm  mt.dep  train.ilk  vc90.idb
workspace/train/Release/: BuildLog.htm  mt.dep  vc90.idb
